# teleport-cli

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  setup.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: build_deb.sh  bump_version.sh  teleport.bash  teleport.ps1  teleport.sh  teleport.zsh  uninstall.sh
src/teleport/: cli.py  db.py  tui.py  utils.py
