[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teleport-cli"
version = "0.1.1"
description = "A cross-platform CLI tool for smart directory navigation"
authors = [
  { name = "Huseyin Acikgoz", email = "huseyin@huseyinacikgoz.com.tr" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
teleport-core = "teleport.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
