[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleport-cli"
version = "1.0.0"
description = "A minimalist Linux directory jumper with Turkish support."
authors = [
  { name = "Huseyin Acikgoz", email = "huseyin@huseyinacikgoz.com.tr" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer[all]>=0.9.0",
    "questionary>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
